<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.salman.inclass04.MainActivity">

        <TextView
            android:text="@string/label_passwords_by_Threads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:id="@+id/txtViewPasswordsByThread" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_below="@+id/txtViewPasswordsByThread"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="250dp"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linearLayoutThread"/>
        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_alignTop="@+id/txtViewPasswordsByAsyncTask"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="26dp"
            android:scrollbars="vertical"
            android:layout_height="150dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linearLayoutAsyncTask"/>
        </ScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtViewPasswordsByAsyncTask"
            android:text="@string/label_text_passwords_asyncTask"
            android:layout_marginTop="185dp"
            android:layout_alignTop="@+id/scrollView2"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/button_label_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="18dp"
            android:layout_marginEnd="18dp"
            android:id="@+id/buttonFinish"
            android:layout_below="@+id/txtViewPasswordsByAsyncTask"
            android:layout_alignRight="@+id/txtViewPasswordsByThread"
            android:layout_alignEnd="@+id/txtViewPasswordsByThread"
            android:layout_marginTop="200dp" />
</RelativeLayout>
</layout>
